[#58158990] fixed translation within tom's show page.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,7 +140,7 @@ en:
       fulfillments: 'Fulfillments'
       fulfillment_files: 'Fulfillment Files'
       disposition_types: 'Disposition Types'
-      subscriptions_plans: 'Subscriptions Plans'
+      subscription_plans: 'Subscription Plans'
     member: 'Member'
     term_of_membership: 'Term of membership'
     email_template: 'Email template'
