[#57392664] fixed is_payment_expected logic. Also fixed tests. Added text to show on member show when member is not waiting for billing. Renamed can_bill_membership method and created new ones.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -280,6 +280,7 @@ en:
           unsynced: Not Synced
           error: Sync Error
         is_lapsed: 'Member was canceled.'
+        billing_is_not_expected: 'Billing is not expected.'
       enrollment_info:
         kit_card_product_sku: KIT-CARD
         product_sku: Product
