--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -136,6 +136,12 @@ en:
     birth_date_is_invalid: "is invalid, it must be null or greater than '1900-01-01'"
     payment_gateway_time_out: "Time out trying to connect with the payment gateway."
   activerecord:
+    errors:
+      models:
+        terms_of_membership:
+          attributes:
+            base:
+              club_payment_gateway_configuration: 'Payment Gateway Configuration is not configured within the club'
     model:
       members: 'Members'
       products: 'Products'
