[#60545228] fixed tom's show page. Removed certain relations with mode, which was removed.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -332,10 +332,8 @@ en:
         installment_type: 'Installment type'
         grace_period: 'Grace period'
         provisional_days: 'Provisional days'
-        has_payment_gateway_development: 'The club has payment gateway configuration for development mode'
-        has_payment_gateway_production: 'The club has payment gateway configuration for production mode'
-        not_have_payment_gateway_development: 'The club does not have payment gateway configuration for development mode'
-        not_have_payment_gateway_production: 'The club does not have payment gateway configuration for production mode'
+        has_payment_gateway: 'The club has payment gateway configuration'
+        not_have_payment_gateway: 'The club does not have payment gateway configuration'
         id: 'ID'
         plan_name: 'Plan Name'
         external_code: 'External Code'
