--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -379,7 +379,7 @@ en:
           subscription_terms: 'Subscription Terms'
           bill_until_cancelled: 'Bill until Member Cancelled'
           stop_billing_after: 'Stop billing after'
-          keep_active_until_manually_cancelled: 'Keep active until manually cancelled'
+          keep_active_until_manually_cancelled: 'Keep provisional until manually cancelled'
           cancel_member_after: 'Cancel member after'
           step_2_button_next: 'Define Upgrades / Downgrades'
           step_2_edit_button_next: 'Edit Upgrades / Downgrades'
@@ -393,10 +393,12 @@ en:
           cancel: 'Cancel'
           suspend_for: 'Suspend for'
           downgrade_to: 'Downgrade to'
-          upgrade_to: 'Upgrade to (optional)'
+          upgrade_to: 'On successful billing, Upgrade to (optional)'
           after: 'after'
           step_3_button_next: 'Create Plan'
           step_3_edit_button_next: 'Update Plan'
+          no_downgrade_upgrade_configuration: 'According to the configuration you selected on step 2, there is nothing to configure on this step.'
+          upgrade_help: "Upon successful billing we will check if the member should be upgraded or not. We will check if join date + upgrade period is older than date when it is billed, and If so, we will change member's subscriptions plan to the one especified."
       email_template:
         name: 'Name'
         type: 'Type'
